--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ lxml = "^4.9.3"
 requests = "^2.31.0"
 beautifulsoup4 = "^4.12.2"
 sqlalchemy = "^2.0.20"
+faker = "^19.6.1"
+mongoengine = "^0.27.0"
 
 
 [build-system]
